white gap fix attemot no 19

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ header{
     margin: 0;
     padding: 0;
 }
+.pageWrap{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 .navBar{
     display: none;
     width: 100%;
@@ -27,7 +32,7 @@ body, html{
     flex-direction: column;
     margin: 0;
     padding: 0;
-    min-height: -webkit-fill-available;
+    min-height: 100dvh;
     background-image: url(daviddesignsBackground.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -42,8 +47,6 @@ main{
     padding-bottom: 32px;
 }
 footer{
-    position: absolute;
-    bottom: 0;
     display: flex;
     justify-content: center;
     background-color: #050709;
@@ -51,7 +54,7 @@ footer{
     font-family: "Roboto",sans-serif;
     font-style: normal;
     font-weight: 150;
-    margin: 0;
+    margin-top: auto;
     padding: 0;
     width: 100%;
 }
